# VulkanRaytracer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  frag.spv  rchit.spv  rgen.spv  rmiss.spv  vert.spv
src/: BottomLevelAS.cpp  BottomLevelAS.h  BottomLevelSphereAS.cpp  BottomLevelSphereAS.h  BottomLevelTriangleAS.cpp  BottomLevelTriangleAS.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Device.cpp  Device.h  GlobalDefs.h  Instance.cpp  Instance.h  SphereFlake.cpp  SphereFlake.h  Texture.cpp  Texture.h  main.cpp
src/models/rossi/: MCRN_Tachi.mtl
src/models/sibenik/: sibenik.mtl
src/models/sponza/: sponza.mtl
src/shaders/: anyhit.rahit  anyhit.spv  closesthit.rchit  closesthit.spv  closesthitsphere.rchit  closesthitsphere.spv  compileShader.bat  intersection.rint  intersection.spv  miss.rmiss  miss.spv  raygen.rgen  raygen.spv  rchit.spv  rgen.spv  shader.vert  shadow.rmiss  shadow.spv
